--- a/src/main/webapp/resources/application.css
+++ b/src/main/webapp/resources/application.css
@@ -88,7 +88,7 @@ section>.row {
 }
 
 #masthead,#footer {
-    background-color: #049cd9;
+     background-color: #000000;
     background-repeat: no-repeat;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#004D9F),
         to(#049cd9) );
@@ -221,7 +221,7 @@ div.quickstart form textarea {
     margin: 40px 0 0;
     padding: 20px 0;
     position: relative;
-    text-shadow: 0 1px 0 #FFFFFF;
+    text-shadow: 0 1px 0 #049cd9;
 }
 
 #footer p {
