--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -49,7 +49,8 @@ body {
 #footer {
   clear: both;
   text-align: center;
-  color: #666666;
+  margin: 100px 500px; 
+  color: #00FFCC;  
   font-size: 0.85em;
 }
 code {
