actualizaciones 3 comit paciente

--- a/src/main/webapp/WEB-INF/view/templates/glue.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/glue.xhtml
@@ -119,7 +119,11 @@
                 </li>
             </h:panelGroup>
         </ui:define>
-
+        
+        <ui:insert id="sid" name="sidebar">
+            <ui:include src="/pages/sidebar.html"/>
+        </ui:insert>
+            
         <ui:define name="messages">
             <ocp:messages id="messages" />
         </ui:define>
