--- a/src/main/webapp/WEB-INF/view/templates/template_1.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/template_1.xhtml
@@ -42,9 +42,9 @@
         <h:body>
 
             <ui:insert name="topbar">
-                <div class="topbar">
-                    <div class="fill">
-                        <div class="container">
+                <div class="topbar" >
+                    <div class="fill" >
+                        <div class="container" style="background:#1b7e66">
                             <h3>
                                 <ui:insert name="topnav-title"/>
                             </h3>
