--- a/src/main/webapp/resources/bootstrap/bootstrap.css
+++ b/src/main/webapp/resources/bootstrap/bootstrap.css
@@ -1309,11 +1309,12 @@ table .headerSortUp.purple, table .headerSortDown.purple {
     overflow: visible;
 }
 .topbar a {
+    /*#7aa578*/
     color: #bfbfbf;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 .topbar h3 a:hover, .topbar .brand a:hover, .topbar ul .active > a {
-    background-color: #333;
+    background-color: #64926a;
     background-color: rgba(255, 255, 255, 0.05);
     color: #ffffff;
     text-decoration: none;
@@ -1383,7 +1384,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
 .topbar input:hover {
     background-color: #bfbfbf;
     background-color: rgba(255, 255, 255, 0.5);
-    color: #ffffff;
+    color: #0004; /*modificado */
 }
 .topbar input:focus, .topbar input.focused {
     outline: 0;
@@ -1397,8 +1398,8 @@ table .headerSortUp.purple, table .headerSortDown.purple {
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
 }
 .topbar-inner, .topbar .fill {
-    background-color: #222;
-    background-color: #222222;
+    background-color: #4e794b;
+    background-color: #4e794b;
     background-repeat: repeat-x;
     background-image: -khtml-gradient(linear, left top, left bottom, from(#333333), to(#222222));
     background-image: -moz-linear-gradient(top, #333333, #222222);
@@ -2049,10 +2050,10 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 }
 .alert-message.block-message {
     background-image: none;
-    background-color: #CCFFCC;
+    background-color: #fdf5d9;
     filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
     padding: 14px;
-    border-color: #66FF99;
+    border-color: #fceec1;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
@@ -2346,7 +2347,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 .popover .inner {
     background-color: #000000;
     background-color: rgba(0, 0, 0, 0.8);
-    padding: 2px;
+    padding: 3px;
     overflow: hidden;
     width: 280px;
     -webkit-border-radius: 6px;
