--- a/src/main/webapp/WEB-INF/view/templates/templateC.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/templateC.xhtml
@@ -122,7 +122,7 @@
                 </div>
             </div>-->
 
-            <div id="footer" style="background: #00ffcc">
+            <div id="footer" >
                 <div class="inner" >
                     <div class="container">
                         <p class="right" >
