--- a/src/main/webapp/WEB-INF/view/templates/template_1.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/template_1.xhtml
@@ -44,7 +44,7 @@
             <ui:insert name="topbar">
                 <div class="topbar" >
                     <div class="fill" >
-                        <div class="container" style="background:#1b7e66">
+                        <div class="container" >
                             <h3>
                                 <ui:insert name="topnav-title"/>
                             </h3>
