actualizacion 16 césar, comit;  cambios todo proyecto

--- a/src/main/webapp/WEB-INF/view/templates/templateC.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/templateC.xhtml
@@ -3,7 +3,9 @@
         xmlns:ocp="http://java.sun.com/jsf/composite/ocpcommon"
         xmlns:ui="http://java.sun.com/jsf/facelets"
         xmlns:a4j="http://richfaces.org/a4j"
+        xmlns:p="http://primefaces.prime.com.tr/ui"
         xmlns:rich="http://richfaces.org/rich">
+    
 
     <h:outputText value='&lt;!DOCTYPE html&gt;' escape="false" />
 
@@ -29,7 +31,7 @@
             <h:outputScript name="bootstrap/twipsy.js" />
             <h:outputScript name="bootstrap/popover.js" />
             <h:outputScript name="bootstrap/alerts.js" />
-
+            <h:outputScript library="js" name="calendar_es.js" />
             <!-- Our customizations -->
             <h:outputStylesheet name="application.css" />
             <h:outputScript name="application.js" />
