--- a/src/main/webapp/WEB-INF/view/templates/templateC.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/templateC.xhtml
@@ -82,10 +82,10 @@
                     <!--Sidebar-->
                     <div class="span4">
                         <div class="sidebar">
-                            <div class="well sidebar-nav">                                    
+                            <!--<div class="well sidebar-nav">                                    
                                 <ui:insert name="sidebar"></ui:insert>
-                            </div>                    
-                        </div>                    
+                            </div>                    -->                   
+                        </div> 
                     </div>    
                     <!--Content-->              
                     <div class="span17">
