--- a/src/main/webapp/resources/bootstrap/bootstrap.css
+++ b/src/main/webapp/resources/bootstrap/bootstrap.css
@@ -966,7 +966,7 @@ textarea[readonly] {
 }
 
 .admin-actions {
-    background: #f5f5f5;
+    background: #d0f9cf;
     margin-top: 0px;
     margin-bottom: 0px;
     padding: 17px 20px 18px 20px;
@@ -1975,7 +1975,7 @@ footer {
 
 .btn.btn-short {        
     background-color: #0064cd;        
-    margin-top: -28px; 
+    margin-top: -1px; 
     margin-right: 18px; 
     float: right; 
     width: 70px;
