actualizacion 1.8 : se modifico fichas medicas y seguridad del proyecto

--- a/src/main/webapp/WEB-INF/view/templates/gluePaciente.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/gluePaciente.xhtml
@@ -19,7 +19,7 @@
         </ui:define>
 
         <ui:define name="topnav-title">
-            <h:link outcome="/pages/home" value="${sitename}" />
+            <h:link outcome="/pages/homePaciente" value="${sitename}" />
         </ui:define>
 
         <ui:define name="topnav-left">
