actualizacion de odontograma 1.2

--- a/src/main/webapp/WEB-INF/view/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/template.xhtml
@@ -36,6 +36,7 @@
             <!--<h:outputScript name="jquery-1.7.js"/>-->
              <!--Our customizations -->
             <h:outputStylesheet name="application.css" />
+            <h:outputStylesheet name="css/odontograma.css" />
             <h:outputScript name="application.js" />
 
             <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
