cambios terminados a todo el proyecto 3.0

--- a/src/main/webapp/WEB-INF/view/elements/loginForm.xhtml
+++ b/src/main/webapp/WEB-INF/view/elements/loginForm.xhtml
@@ -51,7 +51,7 @@
 		<br />
 		<br />
 		<label for="password"><h:outputText value="Password:" /> <ocp:message
-				for="password" /><br /> </label>
+				/><br /> </label>
 		<h:inputSecret id="password" value="#{loginBean.password}"
 			required="true" />
 
