--- a/src/main/webapp/WEB-INF/view/templates/template_1.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/template_1.xhtml
@@ -89,7 +89,7 @@
                     </div>
                 </ui:insert>
 
-                <div class="container" style="margin-left: 14%">
+                <div class="container-content" style="margin-left: 14%">
                     <div class="row">
                         <div class="span6" style="margin-top: 0.5% ">
                             <div style="width: 100%; " class="navbar">
@@ -102,8 +102,8 @@
                         </div>                    
                     </div>
 
-                    <div class="row">
-                        <div class="container_loggedOff">                    
+                    <div class="container">
+                        <div class="container-content">                    
                             <ui:insert name="content-pre" />
                         </div>
                     </div>
@@ -119,19 +119,19 @@
                             });
                         </script>
                     </div>
-                    <div class="row">
-                        <div class="content" style="margin-top: 2px">                    
-                            <div class="span10">
-                                <div class="row">
-                                    <ui:insert name="image_gallery"></ui:insert>
-                                </div>
-                                <div class="row">
-                                    <ui:insert name="content" >
-                                    </ui:insert>        
-                                </div>
+
+                    <div class="content" style="margin-top: 2px">                    
+                        <div class="span10">
+                            <div class="row">
+                                <ui:insert name="image_gallery"></ui:insert>
+                            </div>
+                            <div class="row">
+                                <ui:insert name="content" >
+                                </ui:insert>        
                             </div>
                         </div>
                     </div>
+
                     <div style="clear: none;"></div>
                 </div> 
             </div>
