--- a/src/main/webapp/WEB-INF/view/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/template.xhtml
@@ -78,12 +78,12 @@
                     </div>
                 </ui:insert>
 
-                <div class="container-fluid" style="padding-bottom: 150px;">
+                <div class="container-fluid" style="padding-bottom: 148px;">
                     <div class="row-fluid">
-                        <div class="span3" style="margin: 0 -1% 0 0.5%">
+                        <div class="span3" style="margin: 0 -2% 0 0.3%">
                                     <ui:insert name="sidebar" />  
                         </div>
-                        <div class="container-content" style="float: right">
+                        <div class="container-content" style="float: right;">
                             <div class="container-content">
                                 <ocp:messages id="messages" globalOnly="true" />
                                 <script type="text/javascript">
