Cambios a todo  el proyecto (modelo) y emision de recetas

--- a/src/main/webapp/WEB-INF/view/templates/glue.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/glue.xhtml
@@ -201,8 +201,8 @@
                                 outcome="/pages/farmacia/medicamento/lista">                    
                         </h:link> 
                         <br />  
-                        <h:link value="#{messages['recetas.admin']}" rendered="#{true}" 
-                                outcome="/pages/farmacia/receta/recetas">                    
+                        <h:link value="#{messages['receta.admin']}" rendered="#{true}" 
+                                outcome="/pages/farmacia/receta/listaReceta">                    
                         </h:link>                 
                     </h:panelGroup>
                 </p:panel>
