proyecto por culminar..... v 1

--- a/src/main/webapp/WEB-INF/view/templates/sidebar.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/sidebar.xhtml
@@ -38,13 +38,18 @@
                     <h:link title="#{messages['historiasclinicas.admin']}" rendered="#{true}" 
                             outcome="/pages/depSalud/listaFichaMedica">                    
                         <p:graphicImage value="/resources/img/fichas.png" width="60" height="60" />
+                    </h:link>                    
+                    &nbsp;&nbsp;  
+                    <h:link title="#{messages['consultaMedica.admin']}" rendered="#{true}" 
+                            outcome="/pages/depSalud/medicina/listaConsultas"> 
+                        <p:graphicImage value="/resources/img/consulta.png" width="60" height="60" />
                     </h:link>
                     &nbsp;&nbsp;  
                     <h:link title="#{messages['agendaMedica.admin']}" rendered="#{true}" 
                             outcome="/pages/depSalud/agenda">                    
                         <p:graphicImage value="/resources/img/agendaMed.png" width="60" height="60" />
-                    </h:link>
-                    &nbsp;&nbsp;  
+                    </h:link>                    
+                    &nbsp;&nbsp;
                     <h:link title="#{messages['enfermedadesCie10.admin']}" rendered="#{true}" 
                             outcome="/pages/depSalud/medicina/enfermedadescie10">                    
                         <p:graphicImage value="/resources/img/cie10.png" width="60" height="60" />
@@ -55,6 +60,11 @@
                     <h:link title="#{messages['fichaOdontologica.admin']}" rendered="#{true}" 
                             outcome="/pages/depSalud/listaFichaMedica">                    
                         <p:graphicImage value="/resources/img/fichas.png" width="60" height="60" />
+                    </h:link> 
+                    &nbsp;&nbsp;  
+                    <h:link title="#{messages['consultaOdontologica.admin']}" rendered="#{true}" 
+                            outcome="/pages/depSalud/odontologia/listaConsultaOdontologica">                    
+                        <p:graphicImage value="/resources/img/consultaOdont.png" width="60" height="60" />
                     </h:link> 
                     &nbsp;&nbsp;  
                     <h:link title="#{messages['agendaOdontologica.admin']}" rendered="#{true}" 
