--- a/src/main/webapp/WEB-INF/view/templates/glue.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/glue.xhtml
@@ -60,7 +60,7 @@
                         <h:outputText value=" " />
                         <h:inputSecret id="password" value="#{credentials.password}" style="width: 100px;"/>
                         <h:outputText value=" " />
-                        <h:commandButton action="#{authentication.login}" value="#{messages['common.login']}">
+                        <h:commandButton action="#{authentication.login()}" value="#{messages['common.login']}">
                         </h:commandButton>
                     </h:form>
                 </li>
@@ -86,7 +86,8 @@
                                 <h:graphicImage value="/resources/images/config1.png" width="30" height="25" style="margin: -4px 0 -10px 0;"/>
                             </a>                                                                                  
                             <ul class="dropdown-menu">                                
-                                <li><h:link outcome="/pages/reset" value="Cambiar Contraseña">                                        
+                                <li><h:link outcome="/pages/reset" value="Cambiar Contraseña">
+                                        <f:param name="profileId" value="#{account.loggedId}"/>
                                     </h:link>                                    
                                 </li>
                                 <li><h:link outcome="/pages/temas" value="Cambiar Tema">                                        
