--- a/src/main/webapp/WEB-INF/view/templates/sidebar.xhtml
+++ b/src/main/webapp/WEB-INF/view/templates/sidebar.xhtml
@@ -9,7 +9,7 @@
 
     <ui:composition>
         <h:panelGroup rendered="true" >                
-            <p:panel  header="Panel de Administracion" toggleable="true" rendered="true" style="font-size: 9; width: 115%">
+            <p:panel  header="Panel de Administración" toggleable="true" rendered="true" style="font-size: 9; width: 115%">
                 <h:panelGroup  rendered="#{account.tienePermiso('ADMIN')}" >
                     <h:link title="#{messages['module.setting.name']}" rendered="true" 
                             outcome="/pages/admin/bussinesentitytype/list">
